Alignment changes added

--- a/sigmaCabs/app/styles/bookingStatistics.scss
+++ b/sigmaCabs/app/styles/bookingStatistics.scss
@@ -1,6 +1,6 @@
 .bookingStatistics {
 	margin-left: 6px;
-	width: 365px;
+	/*width: 365px;*/
 	.bookingHistoryGrid {
 		height: 160px;
 		.gridStyle {
