--- a/sigmaCabs/app/styles/dispatch.scss
+++ b/sigmaCabs/app/styles/dispatch.scss
@@ -1,5 +1,6 @@
 fieldset.dispatchFormController {
-	width: 429px;
+	width: 99%;
+	/*width: 429px;*/
 }
 .dispatch-dashboard-view {
 	.row, .no-margin {
