--- a/sigmaCabs/app/styles/main.scss
+++ b/sigmaCabs/app/styles/main.scss
@@ -854,6 +854,7 @@ textFieldCompact[disabled] .textFieldCompact {
 .chatContainer {
   float: left;
   height: 212px;
+  width: 100%;
   margin-left: 7px;
   .chatMsgContainer{
     background: #FFF;
