--- a/sigmaCabs/app/views/bookings/existingCustomerAddBooking.html
+++ b/sigmaCabs/app/views/bookings/existingCustomerAddBooking.html
@@ -1,9 +1,9 @@
 <div data-ng-controller="ExistingCustomerAddBooking" >
 	<div id="topContainerID">
-	    <div data-ng-include="personalDetailsForm" class="left"></div>
-	    <div data-ng-include="bookingDetailsForm" class="left"></div>
-	    <div data-ng-include="bookingStatistics" class="left"></div>
-	    <div data-ng-include="chatForm" class="left"></div>
+	    <div data-ng-include="personalDetailsForm" class="left" style="width:17.2%;"></div>
+	    <div data-ng-include="bookingDetailsForm" class="left" style="width:32%;"></div>
+	    <div data-ng-include="bookingStatistics" class="left" style="width:28%;"></div>
+	    <div data-ng-include="chatForm" class="left" style="width:22.2%;"></div>
 	    <p class="clear"/>
 	</div>
 	<div data-ng-include="bookingTariffGrid" style="margin-top: 7px;"></div>
