--- a/sigmaCabs/app/styles/booking.scss
+++ b/sigmaCabs/app/styles/booking.scss
@@ -63,12 +63,12 @@
 }
 
 
-fieldset.customerDetailsContainer {
+/*fieldset.customerDetailsContainer {
   width: 235px;
 }
 fieldset.bookingFormController {
   width: 430px;
-}
+}*/
 
 ul.bookingNav_ul{
   list-style-type:none;
