--- a/sigmaCabs/app/views/dispatches/dispatcherMainView.html
+++ b/sigmaCabs/app/views/dispatches/dispatcherMainView.html
@@ -1,12 +1,12 @@
 <div>
 	<div id="topContainerID">
-	    <div data-ng-include="vehicleInformationForm" class="left"></div>
-	    <div data-ng-include="vehicleLoginForm" class="left" data-ng-show="vLoginView"></div>
-	    <div data-ng-include="vehicleVacantForm" class="left" data-ng-show="vVacantView"></div>
-	    <div data-ng-include="vehicleAllotForm" class="left" data-ng-show="vAllotView"></div>
-	    <div data-ng-include="vehicleDefaultForm" class="left" data-ng-show="vDefaultView"></div>
-	    <div data-ng-include="bookingStatistics" class="left"></div>
-	    <div data-ng-include="chatForm" class="left"></div>
+	    <div data-ng-include="vehicleInformationForm" class="left" style="width:17.2%;"></div>
+	    <div data-ng-include="vehicleLoginForm" class="left" style="width:32%;" data-ng-show="vLoginView"></div>
+	    <div data-ng-include="vehicleVacantForm" class="left" style="width:32%;" data-ng-show="vVacantView"></div>
+	    <div data-ng-include="vehicleAllotForm" class="left" style="width:32%;" data-ng-show="vAllotView"></div>
+	    <div data-ng-include="vehicleDefaultForm" class="left" style="width:32%;" data-ng-show="vDefaultView"></div>
+	    <div data-ng-include="bookingStatistics" class="left" style="width:28%;"></div>
+	    <div data-ng-include="chatForm" class="left" style="width:22.2%;"></div>
 	    <p class="clear"/>
 	</div>
 	<div data-ng-include="currentMonthData" style="clear:both;"></div>
