--- a/sigmaCabs/app/views/dispatches/currentMonthData.html
+++ b/sigmaCabs/app/views/dispatches/currentMonthData.html
@@ -9,7 +9,7 @@
         <span class="ellipsisText" title="{{currentDayStatistics.expectedLogoutTime}}"><strong>{{currentDayStatistics.expectedLogoutTime}}</strong></span>
 
         <span title="Previous Location"><strong>PL:</strong></span>
-        <span class="ellipsisText" title="{{currentDayStatistics.prevousLocation}}"><strong>{{currentDayStatistics.prevousLocation}}</strong></span>
+        <span class="ellipsisText" title="{{currentDayStatistics.previousLocation}}"><strong>{{currentDayStatistics.previousLocation}}</strong></span>
 
         <span title="Current Location"><strong>CL:</strong></span>
         <span class="ellipsisText" title="{{currentDayStatistics.currentLocation}}"><strong>{{currentDayStatistics.currentLocation}}</strong></span>
