--- a/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
@@ -13,12 +13,12 @@
             <input name="" checked class="left smsCheckbox" type="checkbox" checked>
         </div> -->
         <div class="fieldContainer relative clearBoth">
-            <label class="labelCompact">V.Owner Name </label>
+            <label class="labelCompact" title="Vehicle Owner Name">V.Owner Nm.</label>
             <input type="text" ng-model="vehicleMainDetails.owner.name" class="left textFieldCompact" alphabets-only readonly />
             <span class="smsText">SMS</span>
         </div>
         <div class="fieldContainer relative clearBoth">
-            <label class="labelCompact">Caller Ph.</label>
+            <label class="labelCompact">Caller Phone</label>
             <input type="text" ng-model="callerPhone" class="left textFieldCompact" readonly phone />
             <input name="" checked class="left smsCheckbox" type="checkbox" checked>
         </div>
