Dispatch: Added vehicle more info

--- a/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
@@ -61,6 +61,8 @@
                     <li><a href="javascript:void(0);" data-ng-click="fnRoadSideBooking()">Road Side Booking</a></li>
                     <li class="divider"></li>
                     <li ng-if="vehicleMainDetails.vehicleState != 1"><a href="javascript:void(0);" data-ng-click="fnVehicleBreakdown()">Vehicle Breakdown</a></li>
+                    <li class="divider"></li>
+                    <li><a href="javascript:void(0);" data-ng-click="fnGetVehicleMoreInfo()">Vehicle more details</a></li>
                 </ul>
             </div>
         </div>
