--- a/sigmaCabs/app/views/chat/chatForm.html
+++ b/sigmaCabs/app/views/chat/chatForm.html
@@ -19,7 +19,7 @@
         <hr class="buttonSpliter" />
         <div class="mainButtonContainer">
             <div>
-                <button class="btnCompact btn-success" style="margin:0px;" data-ng-click="fnShowTemplates()">Templates</button>
+                <button class="btnCompact btn-success hide" style="margin:0px;" data-ng-click="fnShowTemplates()">Templates</button>
                 <textarea class="chatMsgText"></textarea>
                 <button class="btnCompact btn-success" style="margin:0px;" data-ng-click="fnShowTemplates()">Send</button>
             </div>
