--- a/sigmaCabs/app/views/login.html
+++ b/sigmaCabs/app/views/login.html
@@ -7,7 +7,7 @@
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
         </ul> -->
-        <h3 class="text-muted dashboard-head loginLogo"></h3>
+        <h3 class="text-muted dashboard-head loginLogo" style="margin: 10px auto;"></h3>
     </div>
       <form class="form-signin" data-ng-submit="fnLogin()">
         <h2 class="form-signin-heading">Please sign in</h2>
